# pybricks-micropython

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  .travis.yml  3RD_PARTY_NOTICES.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  SConscript  _abort.c  _abort.h  _core.h  _display.h  _font.h  _font.h.base  _fs.c  _fs.h  _interrupts.h  _tlsf.c.inc  asm_decls.h  assert.c  assert.h  core.c  core.h  defrag.c  defrag.h  display.c  display.h  doc.h  docker-make  dump.c  dump.h  (+31 more)
.github/: FUNDING.yml  build-each-commit.py  build-missing-commits.py  build-stats-web.py  download-commit-metadata.py  upload-fw-size.sh
.github/workflows/: build.yml  format.yml  npm-firmware.yml  npm-mpy-cross.yml  pr-artifact.yml  release.yml  stats.yml
.travis/: deploy_pypi.sh  upload-fw-size.py  upload-fw-size.sh
bricks/: check.mk  pybricks_config.h  pybricks_qstrdefs.h  stm32.mk  stm32_main.c  stm32configport.h  systick.c
bricks/BOOST-experimental/: Makefile  README.md  frozentest.mpy  frozentest.py  main.c  stm32f070.ld
bricks/EV3/: Makefile  bgrtask.c  bgrtask.h  file.c  input.c  input.h  main.c  micropythonbuild  modev3brick.c  modev3devices.c  modjni.c  modmachine.c  modos.c  modtermios.c  modtime.c  moduselect.c  modusocket.c  motorio.c  motorio.h  mpconfigbrick.h  mpconfigport.h  mpconfigport.mk  mpconfigport_coverage.h  mpconfigport_freedos.h  mpconfigport_nanbox.h  mphalport.h  mpthreadport.c  mpthreadport.h  pbinit.c  pbinit.h  pybricks.c  pybricks.h  qstrdefsport.h
bricks/HUB4/: Makefile  accel.c  brick.mk  brickconfig.h  gpio.h  hub4.ld  main.c  modhub4.c  modmovehub.c  mpconfigbrick.h  mpconfigport.h  systick.c  uart_core.c
bricks/MOVEHUB/: Makefile  README.md  accel.c  accel.h  adc.c  adc.h  brick.mk  brickconfig.h  button.c  button.h  frozentest.mpy  frozentest.py  gpio.h  hub.c  led.c  led.h  main.c  modmovehub.c  modutime.c  motor.c  motor.h  move-hub.ld  move_hub.ld  mpconfigbrick.h  mpconfigport.h  mphalport.h  mymodule.c  pbioconfig.h  qstrdefsport.h  startup_stm32f070xb.s  systick.c  uart_core.c  uartadr.h
bricks/NXT/: Makefile  mpconfigport.h  stm32f405.ld
bricks/_common/: arm_none_eabi.mk  common.mk  manifest.py  micropython.c  mpconfigport.h  mphalport.c  mphalport.h  qstrdefs.h  sources.mk
bricks/_common_stm32/: link.ld  make.mk  mpconfigport.h  mphalport.c
bricks/buildhat/: CMakeLists.txt  Makefile  manifest.py  mpconfigport.h  mphalport.c
bricks/cityhub/: Makefile  ReadMe_OSS.txt  city_hub.ld  main.py  mpconfigport.h  mphalport.h  pbioconfig.h  pbsys_app_config.h
bricks/common/: micropython.c  mpconfigport.h  sources.mk
bricks/common_stm32/: make.mk  mpconfigport.h  mphalport.c
bricks/cplushub/: Makefile  cplus_hub.ld  main.py  mpconfigport.h  pbioconfig.h
bricks/debug/: Makefile  brick.mk  brickconfig.h  debug.ld  main.c  main.py  mpconfigbrick.h  mpconfigport.h  mphalport.h  openocd_stm32f4.cfg  pbioconfig.h  systick.c
bricks/essentialhub/: Makefile  ReadMe_OSS.txt  essential_hub.ld  install_pybricks.py  manifest.py  mpconfigport.h  mphalport.h  pbioconfig.h  pbsys_app_config.h
bricks/ev3/: Makefile  README.md  btstack_config.h  make_bootable_image.py  manifest.py  mpconfigport.h  mphalport.c
bricks/ev3dev/: .gitignore  Makefile  README.md  alloc.c  brickconfig.h  coverage.c  ev3dev_mphal.c  ev3dev_mphal.h  ev3platform.c  ev3platform.h  fatfs_port.c  fdfile.h  gccollect.c  manifest.py  modbluetooth.c  modev3brick.c  modev3devices.c  modffi.c  modmedia_ev3dev.c  moduos_vfs.c  modusignal.c  mpconfigbrick.h  mpconfigport.h  mpconfigport.mk  mpconfigport_fast.h  mpconfigport_minimal.h  pb_ev3dev_types.h  pb_type_ev3dev_font.c  pb_type_ev3dev_image.c  pb_type_ev3dev_screen.c  pb_type_ev3dev_speaker.c  pbdevice.c  pbinit.c  pbinit.h  pbioconfig.h  pbsmbus.c  pbsmbus.h  test-wrapper.sh  unix_mphal.c
bricks/ev3rt/: .gitignore  Makefile  README.md  app.c  app.cfg  app.h  ev3rt.mk  make_bootable_image.py  make_config.py  mpconfigport.h  mphal.c  mphalport.c  mphalport.h
bricks/movehub/: Makefile  ReadMe_OSS.txt  accel.c  accel.h  (+4 more)
debug/: Makefile  main.c  mpconfigport.h  stm32f446.ld  uart_core.c
doc/: LICENSE  Makefile  make.bat
drivers/: _aic.h  _avr.h  _efc.c  _efc.h  _lcd.c  _lcd.h  _motors.h  _sensors.h  _sound.h  _systick.h  _twi.c  _twi.h  _uart.c  _uart.h  _usb.h  aic.c  aic.h  avr.c  avr.h  bt.c  bt.h  control.c  control.h  i2c.c  i2c.h  i2c_memory.c  i2c_memory.h  lcd.c  lcd.h  modconstants.c  moddebug.c  modmotor.c  modmotor.h  modtest.c  motor.py  motordevices.c  motordevices.h  motors.c  motors.h  pberror.c  (+20 more)
extmod/: modadvanced.c  modbattery.c  modbuiltins.c  modbuiltins.h  modbuttons.c  modcityhub.c  modcommon.c  modcommon.h  modcontrol.c  modcplushub.c  modcustomdevices.c  moddebug.c  modenumcommon.c  modenumcommon.h  modev3brick.c  modev3devices.c  modexperimental.c  modhub4.c  modhubcommon.c  modhubcommon.h  modhubs.c  modiodevice.c  modiodevice.h  modiodevices.c  modlight.c  modlight.h  modlogger.c  modlogger.h  modmedia_ev3dev.c  modmotor.c  modmotor.h  modmovehub.c  modnxtdevices.c  modparameters.c  modparameters.h  modpbtime.c  modpupdevices.c  modresources.c  modrobotics.c  modserial.c  (+29 more)
minimal-boost/: LICENSE  README.md  frozentest.mpy  frozentest.py  main.c  mpconfigport.h  mymodule.c  qstrdefsport.h  stm32f070.ld  uart_core.c  uartadr.h
npm/: README.md
py/: modenum.c  modenum.h  pb_type_enum.c  pb_type_enum.h  pberror.c  pberror.h  pbkwarg.h  pbobj.c  pbobj.h  pbthread.c  pbthread.h
pybricks/: ble.h  common.h  ev3devices.h  experimental.h  geometry.h  hubs.h  iodevices.h  media.h  nxtdevices.h  parameters.h  pupdevices.h  pybricks.c  robotics.h  stdio.c  stdio.h  tools.h
tests/: README.md  REAMDE.md  dump-out-files.sh
tools/: archive.py  build-dual-boot-bin.py  build-dual-boot-installer.py  build_llsp.py  checksum.c  checksum.py  codeformat.py  combine_firmware.py  metadata.py  mpybytes.py  playground.ipynb  pparser.py  runserial.py  tag-micropython.sh  tag-stm32lib.sh  time_table.py  trigonometry.ipynb
(+2044 files in other folders)
