[tool.poetry]
name = "pybricks-micropython"
version = "0.1.0"
description = "Development dependencies for pybricks-micropython"
authors = ["The Pybricks Authors <dev@pybricks.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
azure-cosmosdb-table = "^1.0.6"
black = "^20.8b0"
flake8 = "^3.8.3"
GitPython = "^3.1.11"
gql = {version = "3.0.0b0", extras = ["requests"], allow-prereleases = true}
matplotlib = "^3.4.3"
plotly = "^4.14.1"
pybricks = {version = "^3.0.0a5", allow-prereleases = true}
pybricksdev = {version = "1.0.0a18", allow-prereleases = true}
pycryptodomex = "^3.9.9"
PyGithub = "^1.51"
python-dotenv = "^0.15.0"
pyusb = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
