[tool.poetry]
name = "pybricks-micropython"
version = "0.1.0"
description = "Development dependencies for pybricks-micropython"
authors = ["The Pybricks Authors <dev@pybricks.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[tool.poetry.dev-dependencies]
eventlet = "^0.33.3"
flake8 = "^3.8.3"
matplotlib = "^3.4.3"
nbstripout = "^0.5.0"
notebook = "^6.4.12"
pybricks = {version = "^3.0.0a5", allow-prereleases = true}
pybricksdev = "1.0.0a51"
pycryptodomex = "^3.9.9"
python-dotenv = "^0.15.0"
python-socketio = "^5.7.2"
scipy = "^1.8.1"
sympy = "^1.10.1"

[tool.poetry.group.stats.dependencies]
azure-data-tables = "^12.4.2"
gql = {extras = ["requests"], version = "^3.4.0"}
gitpython = "^3.1.31"
plotly = "^5.14.1"
pygithub = "^1.58.1"


[tool.poetry.group.lint.dependencies]
micropython-uncrustify = "^1.0.0.post1"
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
